2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Cosmetic changes to the existing file class.
	* src/TestGphoto2Sharp.cs: Removed old file
	* src/FileSystem.cs: Created a wrapper class for the FileSystem/StorageInfo
	  structs. No methods implemented.
	* src/Camera.cs: Created a wrapper class for 'Camera' with a handful of
	  basic methods/properties
	* src/Abilities.cs: Created a wrapper class for CameraAbilities. All camera
	  abilities, file operations and folder operations are exposed as boolean
	  properties.
	* libgphoto2-sharp.mds, Sample, Sample/AssemblyInfo.cs, Sample/Main.cs,
	  Sample/Sample.mdp: Added a sample console application to demonstrate API
	  usage

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFilesystem.cs: Added xml comments
	* src/Base/Camera.cs: Fixed a leak. The native array needs to be free'ed.
	* src/Base/CameraAbilitiesList.cs: Added the flags attribute to the enums to
	  make it clearer that they are bitfields

2007-09-09  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraList.cs: Added comments

2007-09-08  Alan McGovern <alan.mcgovern@gmail.com> 

	* libgphoto2-sharp.mdp: Removed useless files
	* src/Camera.cs: Cosmetic
	* src/Detector.cs: Removed obsolete file

2007-09-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraWidget.cs: Added xml comments. fixed tab v space issues

2007-09-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* libgphoto2-sharp.mdp: Turned off unsafe code in the project file.

2007-09-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/PortInfoList.cs, src/Base/CameraFilesystem.cs,
	  src/Base/PortInfo.cs, src/Base/Port.cs, src/Base/Camera.cs,
	  src/Base/CameraFile.cs, src/Base/CameraAbilitiesList.cs: Replaced the
	  only use of unsafe code with the safe equivalent. Removed all references
	  to 'unsafe' where the enclosed block wasn't using unsafe code. Project